# super_small_demo

./: .clang-format  .gitignore  CMakeLists.txt  README.md  demo_async_mission.cpp  demo_base_derived.cpp  demo_condition_variable.cpp  demo_coroutine.cpp  demo_friend_method.cpp  demo_future_promise.cpp  demo_member_class.cpp  demo_print_refrence.cpp  demo_producer_consumer_mutex_cond.cpp  demo_thread_print_ABC.cpp  demo_thread_print_ABC2.cpp  demo_use_enum.cpp  include_all_demo.h  main.cpp  small_compile.sh  small_demo_1.cpp  small_demo_2.cpp  small_demo_3.cpp  small_demo_4.cpp  small_demo_5.cpp  small_demo_6.cpp
beautiful_code/: README.md
beautiful_code/fastdds_MPSC/: DBQueue.hpp
design_pattern/DI/: car_1.cpp
design_pattern/Observer/: simple_observer.cpp
design_pattern/Strategy/: no_use_strategy.cpp  use_strategy.cpp
design_pattern/singleton/: singleton.cpp  singleton.h
know_thread/: notify_thread.cpp
shared_pointer_demo/: README.md  loop_reference_demo.cpp  resource_cache_demo.cpp
